--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>1. Membuat List</h1>
+    <p>Daftar kampus diJogja</p>
+    <ul>
+        <li>UGM</li>
+        <li>UPN</li>
+        <li>UNY</li>
+    </ul>
 </body>
 </html>
